--- a/styles/hero.css
+++ b/styles/hero.css
@@ -1,5 +1,5 @@
 section.hero {
-  /* border: 1px solid sienna; */
+  border: 1px solid sienna;
   max-width: 80rem;
   width: 100%;
   padding: 0.75rem 1.5rem;
